# fake-torrent-client

./: .gitignore  Cargo.toml  README.md  client_downloader.py  clients.csv  updater.sh
.github/workflows/: rust-clippy.yml
src/: algorithm.rs  clients.rs  lib.rs
