[package]
name = "fake-torrent-client"
version = "0.9.3"
author = "Sébastien LUNDI"
description = "A rust library to generate torrent client information (key, peer ID, query, ...)"
readme = "README.md"
repository = "https://github.com/slundi/fake-torrent-client"
license = "MIT/Apache-2.0"
keywords = ["torrent", "client", "fake", "ratio"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"
rand_regex = "0.15"
regex = "1.6"
url = "2"
